Frontend - Fixing top margin on all pages on mobile version

--- a/frontend/pages/our-story/index.module.scss
+++ b/frontend/pages/our-story/index.module.scss
@@ -109,6 +109,7 @@
 @media screen and (max-width: 480px) {
     .container {
         margin: 0 8% 0 8%;
+        padding-top: 28%;
     }
 
     .ourStory {
