--- a/frontend/pages/who-we-are/index.module.scss
+++ b/frontend/pages/who-we-are/index.module.scss
@@ -54,6 +54,7 @@
 @media screen and (max-width: 480px) {
     .container {
         margin: 0 9% 0 9%;
+        padding-top: 28%;
     }
     .director {
         margin-top: 0;
